--- a/style.css
+++ b/style.css
@@ -40,4 +40,10 @@ button {
 button:hover{
     background-color: var(--cor-destaque);
     color: var(--cor-principal);
-}
+    .caixa-resultado{
+        display: none;
+    }
+
+    .caixa-resultado.mostrar{
+        dsiplay: block;
+    }
